Move to a cursor-only tool item that can be grabbed from the shortcut bar or the blueprint library

--- a/locale/en/power-grid-comb-en.cfg
+++ b/locale/en/power-grid-comb-en.cfg
@@ -6,3 +6,6 @@ power-grid-comb=Power Grid Comb
 
 [recipe-name]
 power-grid-comb=Power Grid Comb
+
+[shortcut-name]
+shortcut-power-grid-comb-item=Power Grid Comb
