--- a/locale/de/power-grid-comb-de.cfg
+++ b/locale/de/power-grid-comb-de.cfg
@@ -6,3 +6,6 @@ power-grid-comb=Stromnetz-Kamm
 
 [recipe-name]
 power-grid-comb=Stromnetz-Kamm
+
+[shortcut-name]
+shortcut-power-grid-comb-item=Stromnetz-Kamm
