docs: update locale with feature changes
Update the item descriptions to reflect the changes to features

de locale was done with google translate, so may not be perfect

--- a/locale/en/power-grid-comb-en.cfg
+++ b/locale/en/power-grid-comb-en.cfg
@@ -1,5 +1,5 @@
 [item-description]
-power-grid-comb=Cleans up randomly wired power poles
+power-grid-comb=Enforce only straight lines on copper wire power poles
 
 [item-name]
 power-grid-comb=Power Grid Comb
