--- a/locale/de/power-grid-comb-de.cfg
+++ b/locale/de/power-grid-comb-de.cfg
@@ -1,5 +1,5 @@
 [item-description]
-power-grid-comb=Bereinigt zufällig verbundene Strommasten.
+power-grid-comb=Erzwingen Sie bei Strommasten aus Kupferdraht nur gerade Linien
 
 [item-name]
 power-grid-comb=Stromnetz-Kamm
